# cmake-module-error

./: .clang-format  .clang-tidy  .dockerignore  .envrc  .gitignore  CMakeDefaultPresets.json  CMakePresets.json  CPM.cmake  Config.cmake.in  GNUmakefile  README.md  helpers.cmake  run_header_working.sh  run_module_failing.sh  run_module_working.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: googletest.sh  llvm.sh  ninja.sh
.github/workflows/: docker-image.yml
header-exe/: CMakeDefaultPresets.json  CMakeLists.txt  build-and-run.sh  test_main.cpp
header-lib/: CMakeLists.txt  install.sh
header-lib/test-library/: CMakeLists.txt  test_class.cpp  test_class.h
module-exe/: CMakeLists.txt  test_main.cpp
module-lib/: CMakeLists.txt  install-error.sh
module-lib/test-library/: CMakeLists.txt  test_class.ixx
